<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/background_login"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/head_login"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/main_logo"
        android:contentDescription="@string/app_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:hint="@string/user"
        android:textSize="15sp"
        android:id="@+id/user"
        android:inputType="text"
        android:background="@drawable/top_edit_bg"
        android:textColorHint="#ca7a7a7a"
        android:textColor="#cf737562"
        android:singleLine="true"
        android:layout_alignLeft="@+id/cb1"
        android:layout_alignStart="@+id/cb1"
        android:layout_alignRight="@+id/cb2"
        android:layout_alignEnd="@+id/cb2" />

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:layout_alignLeft="@id/user"
        android:layout_alignStart="@+id/user"
        android:layout_alignRight="@id/user"
        android:layout_alignEnd="@+id/user"
        android:background="#cf91947b"
        android:layout_below="@id/user"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/user"
        android:layout_marginTop="0.5dp"
        android:layout_alignLeft="@id/user"
        android:layout_alignStart="@+id/user"
        android:layout_alignRight="@id/user"
        android:layout_alignEnd="@+id/user"
        android:hint="@string/password"
        android:textSize="15sp"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:background="@drawable/bottom_edit_bg"
        android:textColor="#cf737562"
        android:textColorHint="#ca7a7a7a"
        android:singleLine="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:id="@+id/login_button"
        android:text="@string/login"
        android:background="@drawable/round_botton"
        android:textColor="#fffcfaff"
        android:singleLine="true"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/cb1"
        android:layout_alignRight="@+id/cb2"
        android:layout_alignEnd="@+id/cb2"
        android:layout_alignLeft="@+id/cb1"
        android:layout_alignStart="@+id/cb1" />
    <Button
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:id="@+id/button2"
        android:text="@string/title_activity_zhuce"
        android:background="#00000000"
        android:singleLine="true"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="#2B2B2B"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remind_psd"
        android:id="@+id/cb1"
        android:layout_below="@+id/password"
        android:layout_toLeftOf="@+id/copyright"
        android:layout_toStartOf="@+id/copyright" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_login"
        android:id="@+id/cb2"
        android:layout_above="@+id/login_button"
        android:layout_toRightOf="@id/copyright"
        android:layout_toEndOf="@+id/copyright"
         />

</RelativeLayout>



