<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.exemple.hifn123p.qiandao.UI.ManageActivity">

    <!-- 标题 -->
    <LinearLayout
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/group" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/attribute" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/line"
        android:layout_above="@+id/relative"/>

    <RelativeLayout
        android:id="@+id/relative"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/add"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/yuanjiao"
            android:text="@string/add"
            android:textSize="20sp" />

        <Button
            android:text="@string/manager"
            android:id="@+id/manager"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_toEndOf="@+id/add"
            android:layout_toRightOf="@id/add"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/yuanjiao"
            />

        <Button
            android:id="@+id/clear"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_toEndOf="@+id/manager"
            android:layout_toRightOf="@+id/manager"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/yuanjiao"
            android:text="@string/delete"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>
