<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_main2"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zxing.client.android.SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_select"
                android:textSize="20sp"
                android:textColor="#2B2B2B"
                android:gravity="center"/>

            <DatePicker
                android:id="@+id/dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:padding="0dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/input_key"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#ff181994"
            android:textSize="25sp" />

        <Button
            android:id="@+id/all_search"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_below="@+id/et_key"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_botton"
            android:padding="10dp"
            android:text="@string/all_search"
            android:textSize="30sp" />

        <Button
            android:id="@+id/signin_search"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_below="@+id/all_search"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_botton"
            android:gravity="center"
            android:text="@string/kaoqin_search"
            android:textSize="30sp" />

        <Button
            android:id="@+id/group_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signin_search"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_botton"
            android:padding="10dp"
            android:text="@string/group_search"
            android:textSize="20sp"
            android:visibility="invisible" />

    </RelativeLayout>

</LinearLayout>
